	Elide the first two functions, and reshuffle parameters in the last.
	* src/rcfile.c (parse_syntax, parse_rcfile), src/color.c
	(color_update): Turn the linked list of syntaxes upside-down, so that
	the last-defined one comes first, so that searching can stop at the
	first match instead of always having to run through the entire list.

2016-03-09  Benno Schulenberg  <bensberg@justemail.net>
	* src/rcfile.c (parse_syntax): Produce an adequate error message
	when the syntax name is unquoted.  This fixes Savannah bug #47324.
	* src/rcfile.c (parse_syntax): Use the grab_and_store() function
	also for gathering up extension regexes.

2016-03-04  Benno Schulenberg  <bensberg@justemail.net>
	* src/color.c (found_in_list): Don't bother keeping the compiled
	regular expression when it matched -- drop this tiny optimization
	for when opening multiple files.  Instead stop calling malloc().
	* src/nano.h: Delete a now-unused struct member.
	* src/global.c (free_list_item): Elide this now too tiny function.
	* scr/global.c (thanks_for_all_the_fish): Rename three variables.
	* src/rcfile.c (parse_colors): Tweak a few things.
	* src/color.c (color_update): Rename a variable.

2016-03-01  Benno Schulenberg  <bensberg@justemail.net>
	* src/rcfile.c (parse_syntax), src/color.c (color_update): Don't
	bother discarding a duplicate syntax (it's too rare, saves little
	memory, and freeing it properly	would cost even more code), just
	select the last-defined one.  This addresses Savannah bug #47303.
	* src/color.c (color_update): Allow to select an empty syntax.

2016-02-29  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.h, src/rcfile.c, src/color.c: Rename a struct member.
	* src/rcfile.c (parse_rcfile): Don't allocate a struct for the "none"
	syntax, and thus prevent it from being extended.
	* src/nano.h, src/rcfile.c: Arrange some things more orderly.
	* src/rcfile.c (parse_rcfile): Close an extended syntax again.
	* src/rcfile.c (parse_rcfile): Rename a variable.