@@ -9,6 +9,7 @@
 	(color_update): Turn the linked list of syntaxes upside-down, so that
 	the last-defined one comes first, so that searching can stop at the
 	first match instead of always having to run through the entire list.
+	* src/rcfile.c: Rename a variable to better fit its new role.
 
 2016-03-09  Benno Schulenberg  <bensberg@justemail.net>
 	* src/rcfile.c (parse_syntax): Produce an adequate error message
